# Find_and_create_lines

./: CMakeLists.txt  README.md  design.md
Ideas/: design.md
include/: AllFilters.h  BlureData.h  EdgeDetector.h  Gaussian_blur.h  HoughTransform.h  RemovingExtraLines.h  Sobel.h  Tests.h  TrackbarsData.h  mainInclude.h
src/: EdgeDetector.cpp  GausianBlur.cpp  Gaussian_blur.cpp  HoughTransform.cpp  RemovingExtraLines.cpp  Sobel.cpp  Tests.cpp  main.cpp
